fix the pointyQuiz and now it is working show more than 4 option if exist in pointyQuiz remove csrf token from quizPointy show the psychology tests again in indexPage add before the title of quizzes in index page a paint brush style fix the z index in 404 page: the message was hidding behind the 404

--- a/frontend/static/css/base/_globals.scss
+++ b/frontend/static/css/base/_globals.scss
@@ -612,6 +612,23 @@ input {
     }
 }
 
+.paintBrush {
+    position: relative;
+    z-index: 1;
+
+    &::before {
+        background: url('/static/img/redBrush.png') no-repeat center center;
+        content: '';
+        display: block;
+        width: 10rem;
+        height: 1.5rem;
+        transform: translate(2rem, 2.5rem);
+        z-index: -1;
+        position: relative;
+        filter: blur(1px);
+    }
+}
+
 @keyframes load {
     from {
         left: -450px;
