--- a/frontend/static/css/templates/_index.scss
+++ b/frontend/static/css/templates/_index.scss
@@ -94,62 +94,62 @@
     }
 }
 
-.category {
-    flex-wrap: wrap;
-    margin: 0 auto;
+// .category {
+//     flex-wrap: wrap;
+//     margin: 0 auto;
 
-    a {
-        margin-right: 1rem;
-    }
+//     a {
+//         margin-right: 1rem;
+//     }
 
-    @include breakpoints-down(medium) {
-        a {
-            text-align: center;
-        }
-    }
+//     @include breakpoints-down(medium) {
+//         a {
+//             text-align: center;
+//         }
+//     }
 
-    &__title {
-        padding-top: 13rem;
-        padding-right: 1.125rem;
+//     &__title {
+//         padding-top: 13rem;
+//         padding-right: 1.125rem;
 
-        @include breakpoints-down(medium) {
-            padding-top: 5rem;
-        }
-    }
+//         @include breakpoints-down(medium) {
+//             padding-top: 5rem;
+//         }
+//     }
     
-    img {
-        width: 14.6875rem; height: 14.6875rem;
-        border-radius: 20px;
-        box-shadow: 5px 10px 16px #000000d9;
-        margin: 1.4375rem; margin-bottom: .5rem;
-        transition: all .3s ease-in-out;
+//     img {
+//         width: 14.6875rem; height: 14.6875rem;
+//         border-radius: 20px;
+//         box-shadow: 5px 10px 16px #000000d9;
+//         margin: 1.4375rem; margin-bottom: .5rem;
+//         transition: all .3s ease-in-out;
         
-        &:hover {
-            box-shadow: 5px 10px 22px rgba(65, 0, 0, 0.645);
-            transform: translateY(-.625rem);
-        }
+//         &:hover {
+//             box-shadow: 5px 10px 22px rgba(65, 0, 0, 0.645);
+//             transform: translateY(-.625rem);
+//         }
 
-        @include breakpoints-down(medium) {
-                    width: 9rem;
-                    height: 9rem;
-                    margin: .5rem;
-                    margin-bottom: 0;
-        }
-    }
+//         @include breakpoints-down(medium) {
+//                     width: 9rem;
+//                     height: 9rem;
+//                     margin: .5rem;
+//                     margin-bottom: 0;
+//         }
+//     }
 
-    h3 {
-        margin-top: 0;
-        display: block;
-        font-family: myLalezar, myHarmattan, sans-serif;
-        font-weight: 100;
-        transform: translate(1rem);
-        font-size: 1.5rem;
+//     h3 {
+//         margin-top: 0;
+//         display: block;
+//         font-family: myLalezar, myHarmattan, sans-serif;
+//         font-weight: 100;
+//         transform: translate(1rem);
+//         font-size: 1.5rem;
 
-        @include breakpoints-down(medium) {
-            font-size: 1.3rem; 
-        }
-    }
-}
+//         @include breakpoints-down(medium) {
+//             font-size: 1.3rem; 
+//         }
+//     }
+// }
 
 .sort {
     height: 36rem;
